--- a/metrics/web/pubspec.yaml
+++ b/metrics/web/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   universal_html: ^1.2.3
   selection_menu: ^0.9.0
   duration: ^2.0.15
+  shimmer_animation: ^0.0.9
   metrics_core:
     path: ../core
 
